Changelog
=========

head
~~~~

1.0b2 (released 11/10/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for translating dynamic body text (used in
  interpolation expressions). [malthe]

- Added support for macros prebound to keyword arguments. [malthe]

1.0b1 (released 2/10/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

- Fixed bugs related to temporary variables with loops and
  conditions. [malthe]

- Set default value for `auto-reload` based on the CHAMELEON_DEBUG
  environment variable check. [malthe]

1.0a4 (released 9/29/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added method to generate unscoped temporary variables.  [malthe]

- Make lxml a hard dependency for now until the lxml-less logic is stable.
  [wichert]

1.0a3 (released 9/26/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

- TemplateLoader now checks a default_parser class attribute if no
  parser is specified. [wichert]

1.0a2 (released 9/26/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for dynamic skip condition. [malthe]

- Fixed bug where an AttributeError would be raised when using the
  file cache. [malthe]

1.0a1 (released 9/24/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

- First release.

